// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`currentPathName changes, but pathname stays the same (only query changes) 1`] = `
Object {
  "location": Object {
    "basename": "",
    "entries": Array [
      Object {
        "basename": "",
        "hash": "",
        "key": "345678",
        "pathname": "/third",
        "search": "",
        "state": Object {},
        "url": "/third",
      },
      Object {
        "basename": "",
        "hash": "",
        "key": "345678",
        "pathname": "/first",
        "search": "foo=bar&baz=69",
        "state": Object {},
        "url": "/first?foo=bar&baz=69",
      },
      Object {
        "basename": "",
        "hash": "",
        "key": "345678",
        "pathname": "/first",
        "search": "foo=car&baz=70",
        "state": Object {},
        "url": "/first?foo=car&baz=70",
      },
    ],
    "hasSSR": false,
    "hash": "",
    "index": 2,
    "kind": "push",
    "length": 3,
    "params": Object {},
    "pathname": "/first",
    "prev": Object {
      "basename": "",
      "entries": Array [
        Object {
          "basename": "",
          "hash": "",
          "key": "345678",
          "pathname": "/third",
          "search": "",
          "state": Object {},
          "url": "/third",
        },
        Object {
          "basename": "",
          "hash": "",
          "key": "345678",
          "pathname": "/first",
          "search": "foo=bar&baz=69",
          "state": Object {},
          "url": "/first?foo=bar&baz=69",
        },
      ],
      "hasSSR": false,
      "hash": "",
      "index": 1,
      "kind": "push",
      "length": 2,
      "params": Object {},
      "pathname": "/first",
      "query": Object {
        "baz": "69",
        "foo": "bar",
      },
      "scene": "",
      "search": "foo=bar&baz=69",
      "state": Object {},
      "status": 200,
      "type": "FIRST",
      "url": "/first?foo=bar&baz=69",
    },
    "query": Object {
      "baz": "70",
      "foo": "car",
    },
    "scene": "",
    "search": "foo=car&baz=70",
    "state": Object {},
    "status": 200,
    "type": "FIRST",
    "url": "/first?foo=car&baz=70",
  },
  "title": "FIRST",
}
`;

exports[`dispatched as action.query 1`] = `
Object {
  "location": Object {
    "basename": "",
    "entries": Array [
      Object {
        "basename": "",
        "hash": "",
        "key": "345678",
        "pathname": "/third",
        "search": "",
        "state": Object {},
        "url": "/third",
      },
      Object {
        "basename": "",
        "hash": "",
        "key": "345678",
        "pathname": "/first",
        "search": "baz=69&foo=bar",
        "state": Object {},
        "url": "/first?baz=69&foo=bar",
      },
      Object {
        "basename": "",
        "hash": "",
        "key": "345678",
        "pathname": "/third",
        "search": "baz=69&foo=bar",
        "state": Object {},
        "url": "/third?baz=69&foo=bar",
      },
    ],
    "hasSSR": false,
    "hash": "",
    "index": 2,
    "kind": "push",
    "length": 3,
    "params": Object {},
    "pathname": "/third",
    "prev": Object {
      "basename": "",
      "entries": Array [
        Object {
          "basename": "",
          "hash": "",
          "key": "345678",
          "pathname": "/third",
          "search": "",
          "state": Object {},
          "url": "/third",
        },
        Object {
          "basename": "",
          "hash": "",
          "key": "345678",
          "pathname": "/first",
          "search": "baz=69&foo=bar",
          "state": Object {},
          "url": "/first?baz=69&foo=bar",
        },
      ],
      "hasSSR": false,
      "hash": "",
      "index": 1,
      "kind": "push",
      "length": 2,
      "params": Object {},
      "pathname": "/first",
      "query": Object {
        "baz": 69,
        "foo": "bar",
      },
      "scene": "",
      "search": "baz=69&foo=bar",
      "state": Object {},
      "status": 200,
      "type": "FIRST",
      "url": "/first?baz=69&foo=bar",
    },
    "query": Object {
      "baz": 69,
      "foo": "bar",
    },
    "scene": "",
    "search": "baz=69&foo=bar",
    "state": Object {},
    "status": 200,
    "type": "THIRD",
    "url": "/third?baz=69&foo=bar",
  },
  "title": "THIRD",
}
`;

exports[`generated from urlToAction within <Link /> 1`] = `
Object {
  "location": Object {
    "basename": "",
    "entries": Array [
      Object {
        "basename": "",
        "hash": "",
        "key": "345678",
        "pathname": "/third",
        "search": "",
        "state": Object {},
        "url": "/third",
      },
      Object {
        "basename": "",
        "hash": "",
        "key": "345678",
        "pathname": "/first",
        "search": "baz=69&foo=bar",
        "state": Object {},
        "url": "/first?baz=69&foo=bar",
      },
      Object {
        "basename": "",
        "hash": "bla",
        "key": "345678",
        "pathname": "/first",
        "search": "baz=70&foo=car",
        "state": Object {},
        "url": "/first?baz=70&foo=car#bla",
      },
    ],
    "hasSSR": false,
    "hash": "bla",
    "index": 2,
    "kind": "push",
    "length": 3,
    "params": Object {},
    "pathname": "/first",
    "prev": Object {
      "basename": "",
      "entries": Array [
        Object {
          "basename": "",
          "hash": "",
          "key": "345678",
          "pathname": "/third",
          "search": "",
          "state": Object {},
          "url": "/third",
        },
        Object {
          "basename": "",
          "hash": "",
          "key": "345678",
          "pathname": "/first",
          "search": "baz=69&foo=bar",
          "state": Object {},
          "url": "/first?baz=69&foo=bar",
        },
      ],
      "hasSSR": false,
      "hash": "",
      "index": 1,
      "kind": "push",
      "length": 2,
      "params": Object {},
      "pathname": "/first",
      "query": Object {
        "baz": "69",
        "foo": "bar",
      },
      "scene": "",
      "search": "baz=69&foo=bar",
      "state": Object {},
      "status": 200,
      "type": "FIRST",
      "url": "/first?baz=69&foo=bar",
    },
    "query": Object {
      "baz": "70",
      "foo": "car",
    },
    "scene": "",
    "search": "baz=70&foo=car",
    "state": Object {},
    "status": 200,
    "type": "FIRST",
    "url": "/first?baz=70&foo=car#bla",
  },
  "title": "FIRST",
}
`;

exports[`history.push("/path?search=foo") 1`] = `
Object {
  "location": Object {
    "basename": "",
    "entries": Array [
      Object {
        "basename": "",
        "hash": "",
        "key": "345678",
        "pathname": "/third",
        "search": "",
        "state": Object {},
        "url": "/third",
      },
      Object {
        "basename": "",
        "hash": "",
        "key": "345678",
        "pathname": "/first",
        "search": "foo=bar&baz=69",
        "state": Object {},
        "url": "/first?foo=bar&baz=69",
      },
      Object {
        "basename": "",
        "hash": "",
        "key": "345678",
        "pathname": "/third",
        "search": "foo=bar&baz=69",
        "state": Object {},
        "url": "/third?foo=bar&baz=69",
      },
    ],
    "hasSSR": false,
    "hash": "",
    "index": 2,
    "kind": "push",
    "length": 3,
    "params": Object {},
    "pathname": "/third",
    "prev": Object {
      "basename": "",
      "entries": Array [
        Object {
          "basename": "",
          "hash": "",
          "key": "345678",
          "pathname": "/third",
          "search": "",
          "state": Object {},
          "url": "/third",
        },
        Object {
          "basename": "",
          "hash": "",
          "key": "345678",
          "pathname": "/first",
          "search": "foo=bar&baz=69",
          "state": Object {},
          "url": "/first?foo=bar&baz=69",
        },
      ],
      "hasSSR": false,
      "hash": "",
      "index": 1,
      "kind": "push",
      "length": 2,
      "params": Object {},
      "pathname": "/first",
      "query": Object {
        "baz": "69",
        "foo": "bar",
      },
      "scene": "",
      "search": "foo=bar&baz=69",
      "state": Object {},
      "status": 200,
      "type": "FIRST",
      "url": "/first?foo=bar&baz=69",
    },
    "query": Object {
      "baz": "69",
      "foo": "bar",
    },
    "scene": "",
    "search": "foo=bar&baz=69",
    "state": Object {},
    "status": 200,
    "type": "THIRD",
    "url": "/third?foo=bar&baz=69",
  },
  "title": "THIRD",
}
`;
